# Trinity-Launcher

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TRANSLATION.md  build.sh  patchelf
.github/workflows/: appimage.yml  compilar.yml
app/: CMakeLists.txt
app/src/: main.cpp  trinito_main.cpp
include/TrinityLib/core/: discord_manager.hpp  game_launcher.hpp
include/TrinityLib/ui/: app_helpers.hpp
include/TrinityLib/ui/windows/: launcher_window.hpp  trinito_window.hpp
resources/: resources.qrc
resources/i18n/: trinity_ca.ts  trinity_en.ts  trinity_es.ts  trinity_pt_BR.qm  trinity_pt_BR.ts  trinity_uk.ts
src/TrinityLib/core/: CMakeLists.txt  discord_manager.cpp  exporter.cpp  game_launcher.cpp  version_manager.cpp
src/TrinityLib/ui/: CMakeLists.txt
src/TrinityLib/ui/windows/: launcher_window.cpp  trinito_window.cpp
tests/: CMakeLists.txt  discord_presence.cpp
