cmake_minimum_required(VERSION 3.17)
project(Trinity LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(TRINITY_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

include_directories(include)

find_package(
  Qt6
  COMPONENTS Core Widgets LinguistTools
  REQUIRED)

# We define which language use
qt_standard_project_setup(I18N_TRANSLATED_LANGUAGES en ca uk)

set(TRINITY_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(TRINITY_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

file(GLOB_RECURSE PROJECT_TRANSLATABLE_FILES "${TRINITY_SRC_DIR}/*.cpp"
     "${TRINITY_INC_DIR}/*.hpp")

add_subdirectory(external)

add_subdirectory(src/TrinityLib/core)
add_subdirectory(src/TrinityLib/ui)

add_subdirectory(app)

# --- Translations ---
# Must be after add_subdirectory(app) so trinchete/trinito targets exist
# Using qt_add_lrelease + qt_add_resources for Qt6 < 6.7 compatibility
set(TS_DIR "${CMAKE_SOURCE_DIR}/resources/i18n")

set(TS_FILES
  "${TS_DIR}/trinity_en.ts"
  "${TS_DIR}/trinity_ca.ts"
  "${TS_DIR}/trinity_uk.ts")

# Compile .ts -> .qm
qt_add_lrelease(trinchete
  TS_FILES ${TS_FILES}
  QM_FILES_OUTPUT_VARIABLE QM_FILES)

# Embed .qm resources into trinchete
qt_add_resources(trinchete "translations"
  PREFIX "/i18n"
  BASE "${CMAKE_CURRENT_BINARY_DIR}"
  FILES ${QM_FILES})

# Embed same .qm resources into trinito
qt_add_resources(trinito "translations"
  PREFIX "/i18n"
  BASE "${CMAKE_CURRENT_BINARY_DIR}"
  FILES ${QM_FILES})
